objects/CS_ResultTemplateConfigSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>List Custom setting for the result template fields.</description>
    <fields>
        <fullName>Class__c</fullName>
        <defaultValue>&quot;coveo-kb-article-number&quot;</defaultValue>
        <description>span element&apos;s class attribute for css</description>
        <label>Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveoFieldName__c</fullName>
        <defaultValue>&quot;sfkbarticlenumber&quot;</defaultValue>
        <description>span elements coveo field name</description>
        <label>CoveoFieldName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Span elements order.</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextToDisplay__c</fullName>
        <description>Text to be displayed in the span element</description>
        <label>TextToDisplay</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Knowledge Article&quot;</defaultValue>
        <description>Type of the span element.</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CS_ResultTemplateConfigSetting</label>
</CustomObject>